--- a/templates/meet_with_a_fellow.html
+++ b/templates/meet_with_a_fellow.html
@@ -52,7 +52,7 @@
               </tr>
               <tr>
                 <td scope="row">Feburary 5th, 12:00 PM - 01:00 PM PST</td>
-                <td style="white-space: pre-wrap;">Eugene Freuder, Mark Maybury, Marie desJardins</td>
+                <td style="white-space: pre-wrap;">Murray Campbell, Eugene Freuder, Mark Maybury, Marie desJardins</td>
               </tr>
               <tr>
                 <td scope="row">Feburary 5th, 01:00 PM - 02:00 PM PST</td>
@@ -60,7 +60,7 @@
               </tr>
               <tr>
                 <td scope="row">Feburary 6th, 12:00 PM - 01:00 PM PST</td>
-                <td style="white-space: pre-wrap;">Bing Liu, Murray Campbell</td>
+                <td style="white-space: pre-wrap;">Bing Liu</td>
               </tr>
               <tr>
                 <td scope="row">Feburary 6th, 08:00 PM - 09:00 PM PST</td>
