update job fair participants

--- a/templates/ai_job_fair 2.html
+++ b/templates/ai_job_fair 2.html
@@ -25,19 +25,21 @@
     </p>
     
     <p class="lead">AAAI/ACM SIGAI Job Fair Participating Companies:<br><br>
+    AITopics<br>
     Amazon<br>
-    IBM<br>
-    Baidu<br>
-    Google Research<br>
-    Sony<br>
+    American Friends of the Alexander von Humboldt Foundation<br>
     Apple<br>
+    Baidu<br>
     Bloomberg<br>
     Dataminr<br>
+    Google<br>
+    IBM<br>
     LG AI Research<br>
     Meituan<br>
     Microsoft<br>
-    American Friends of the Alexander von Humboldt Foundation<br>
     Ralph<br>
+    Sony<br>
+    The Center for Deep Learning at Northwestern University<br>
     </p>
   </div>
 </div>
