--- a/templates/cal_head.html
+++ b/templates/cal_head.html
@@ -6,7 +6,8 @@
   
   // We use https://fullcalendar.io/
   document.addEventListener('DOMContentLoaded', function() {
-      var initialTimeZone = moment.tz.guess();
+      {#var initialTimeZone = moment.tz.guess();#}
+      var initialTimeZone = "PST8PDT"
       var timeZoneSelectorEl = document.getElementById('time-zone-selector');
       var eventTypeSelectorEl = document.getElementById('event-type-selector');
       // get event types
@@ -50,6 +51,7 @@
         slotDuration: "00:30:00",
         height: "auto",
           firstDay: 2,
+
         events: function(info, successCallback, failureCallback) {
             // We need to change the time zone manually,
             // we cannot use static event data
@@ -57,6 +59,12 @@
             let tz = info.timeZone;
             //get selected event types
             let eventTypes = [...eventTypeSelectorEl.options].filter(option => option.selected).map(option => option.value);
+
+            {#let eventTypes = ["Plenary", "Posters", "EAAI", "Workshops", "Tutorials", "Doctoral Consortium",#}
+            {#     "Undergraduate Consortium", "Diversity and Inclusion",#}
+            {#    "Meet with a Fellow", "Sponsors/Exhibitors", "AI Job Fair"#}
+            {#   ];#}
+
 
             if (tz === "Local") {
                 tz = moment.tz.guess();
