--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -23,12 +23,13 @@
   <div class="form-group col">
     <label for="time-zone-selector">Timezone:</label>
     <select id="time-zone-selector" class="selectpicker" data-live-search="true">
-      <option value="local" selected>Local</option>
-      <option value="PST8PDT">PST</option>
+      <option value="PST8PDT" selected>PST</option>
+      <option value="local">Local</option>
+
     </select>
     <label for="event-type-selector">&nbsp;Event type:</label>
     <select id="event-type-selector" class="selectpicker" multiple>
-        {% for event_type in event_types | sort %}
+        {% for event_type in event_types%}
         <option value="{{ event_type }}" selected>{{ event_type }}</option>
         {% endfor %}
     </select>
