--- a/templates/meet_with_a_fellow.html
+++ b/templates/meet_with_a_fellow.html
@@ -1,7 +1,7 @@
 {% set active_page = "Meet with a fellow" %}
 {% extends "base.html" %}
 {% block heading %}
-{{ components.section("Meet with A Fellow") }}
+{{ components.section("Meet with a Fellow") }}
 {% endblock %}
 
 {% block top %}
