--- a/templates/plenary_session.html
+++ b/templates/plenary_session.html
@@ -33,7 +33,7 @@
     {{ components.live_sessions(
         plenary_session.sessions,
         plenary_session.title,
-        "https://virtual.2020.emnlp.org/plenary_session_" + plenary_session.id + ".html",
+        "https://virtual.2021.aaai.org/plenary_session_" + plenary_session.id + ".html",
         true) }}
 
   </div>
