--- a/templates/doctoral_consortium.html
+++ b/templates/doctoral_consortium.html
@@ -118,8 +118,8 @@
                 <td>
                   {{event.day}}, <span class="session_times">{{event.time_string}}</span>
                 </td>
-                <td scope="row"><b>Session 3</b><br /><a href="paper_DC-314.html">1. Robots that Help Humans Build Better Mental Models of Robots</a><br /><a href="paper_DC-276.html">2. A Computational Approach to Sign Language Understanding</a><br /><a href="paper_DC-200.html">3. Creating Interpretable Data-Driven Approaches for Remote Health Monitoring</a></td>
-                <td style="white-space: pre-wrap;">1. Speaker: Preeti Ramaraj, Mentor: Laura Hiatt, Buddy: Paulo Mann <br />2. Speaker: Tejaswini Ananthanarayana, Mentor: Shirin Sohrabi, Buddy: Alireza Ghods<br />3. Speaker: Alireza Ghods, Mentor: Rushil Anirudh, Buddy: Tejaswini Ananthanarayana</td>
+                <td scope="row"><b>Session 3</b><br /><a href="paper_DC-276.html">1. A Computational Approach to Sign Language Understanding</a><br /><a href="paper_DC-200.html">2. Creating Interpretable Data-Driven Approaches for Remote Health Monitoring</a><br /><a href="paper_DC-314.html">3. Robots that Help Humans Build Better Mental Models of Robots</a></td>
+                <td style="white-space: pre-wrap;">1. Speaker: Tejaswini Ananthanarayana, Mentor: Shirin Sohrabi, Buddy: Alireza Ghods<br />2. Speaker: Alireza Ghods, Mentor: Rushil Anirudh, Buddy: Tejaswini Ananthanarayana<br />3. Speaker: Preeti Ramaraj, Mentor: Laura Hiatt, Buddy: Paulo Mann</td>
             </tr>
         {% else %}
             <tr>
