--- a/templates/posters.html
+++ b/templates/posters.html
@@ -91,10 +91,10 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
     <tr>
       <td>5-Feb</td>
       <td>04:45PM-06:30PM</td>
-      <td><a href="posters_feb5.html#AB-D2-R1">AB-D2-R1</a> +
-          <a href="posters_feb5.html#AB-D2-R2">AB-D2-R2</a> +
-          <a href="posters_feb5.html#AC-D2-R1">AC-D2-R1</a> +
-          <a href="posters_feb5.html#AC-D2-R2">AC-D2-R2</a> ,
+      <td><a href="posters_feb5.html#AC-D2-R1">AC-D2-R1</a> +
+          <a href="posters_feb5.html#AC-D2-R2">AC-D2-R2</a> +
+          <a href="posters_feb5.html#BC-D2-R1">BC-D2-R1</a> +
+          <a href="posters_feb5.html#BC-D2-R2">BC-D2-R2</a> ,
           <a href="posters_feb5.html#IAAI-D2">IAAI-D2</a> ,
           <a href="posters_feb5.html#SA-D2">SA-D2</a> ,
           <a href="posters_feb5.html#DEMO-D2">DEMO-D2</a> ,
@@ -106,8 +106,8 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       <td>12:45AM-02:30AM</td>
       <td><a href="posters_feb5.html#AB-D2-R1">AB-D2-R1</a> +
           <a href="posters_feb5.html#AB-D2-R2">AB-D2-R2</a> +
-          <a href="posters_feb5.html#BC-D2-R1">BC-D2-R1</a> +
-          <a href="posters_feb5.html#BC-D2-R2">BC-D2-R2</a> ,
+          <a href="posters_feb5.html#AC-D2-R1">AC-D2-R1</a> +
+          <a href="posters_feb5.html#AC-D2-R2">AC-D2-R2</a> ,
           <a href="posters_feb5.html#IAAI-D2">IAAI-D2</a> ,
           <a href="posters_feb5.html#SA-D2">SA-D2</a> ,
           <a href="posters_feb5.html#DEMO-D2">DEMO-D2</a> ,
