--- a/templates/index.html
+++ b/templates/index.html
@@ -224,76 +224,76 @@
 
 
   <div class="col-md-5 col-sm-12">
-      <div class="row m-2">
+{#      <div class="row m-2">#}
     <!-- Slides Live-->
-    <div class="col-md-12 col-xs-12 my-auto p-2" >
-        <div class="text-muted">
-      Intro by General Chair
-      </div>
-      <div id="presentation-intro" class="slp my-auto"></div>
-
-      <script src='static/js/embed_presentation.js'></script>
-      <script>
-        embed = new SlidesLiveEmbed('presentation-intro', {
-        presentationId: '38952017',
+{#    <div class="col-md-12 col-xs-12 my-auto p-2" >#}
+{#        <div class="text-muted">#}
+{#      Intro by General Chair#}
+{#      </div>#}
+{#      <div id="presentation-intro" class="slp my-auto"></div>#}
+{##}
+{#      <script src='static/js/embed_presentation.js'></script>#}
+{#      <script>#}
+{#        embed = new SlidesLiveEmbed('presentation-intro', {#}
+{#        presentationId: '38952017',#}
 {#        presentationId: '38938822',#}
-        autoPlay: false, // change to true to autoplay the embedded presentation
-        verticalEnabled: false,
-        verticalWhenWidthLte: 500,
-        allowHiddenControlsWhenPaused: true,
-        hideTitle: true
-        });
-      </script>
-
-    </div>
-
-     <div class="col-md-12 col-xs-12 my-auto p-2" >
-        <div class="text-muted">
-      Intro by Program Chairs
-      </div>
-
-      <div id="presentation-intro-1" class="slp my-auto"></div>
-
-      <script src='static/js/embed_presentation.js'></script>
-      <script>
-        embed_1 = new SlidesLiveEmbed('presentation-intro-1', {
-        presentationId: '38952018',
+{#        autoPlay: false, // change to true to autoplay the embedded presentation#}
+{#        verticalEnabled: false,#}
+{#        verticalWhenWidthLte: 500,#}
+{#        allowHiddenControlsWhenPaused: true,#}
+{#        hideTitle: true#}
+{#        });#}
+{#      </script>#}
+{##}
+{#    </div>#}
+{##}
+{#     <div class="col-md-12 col-xs-12 my-auto p-2" >#}
+{#        <div class="text-muted">#}
+{#      Intro by Program Chairs#}
+{#      </div>#}
+{##}
+{#      <div id="presentation-intro-1" class="slp my-auto"></div>#}
+{##}
+{#      <script src='static/js/embed_presentation.js'></script>#}
+{#      <script>#}
+{#        embed_1 = new SlidesLiveEmbed('presentation-intro-1', {#}
+{#        presentationId: '38952018',#}
 {#        presentationId: '38938822',#}
-        autoPlay: false, // change to true to autoplay the embedded presentation
-        verticalEnabled: false,
-        verticalWhenWidthLte: 500,
-        allowHiddenControlsWhenPaused: true,
-        hideTitle: true
-        });
-      </script>
-
-    </div>
-
-
-          <div class="col-md-12 col-xs-12 my-auto p-2" >
-        <div class="text-muted">
-      Intro by Associate Conference Chairs for Virtual Operations
-      </div>
-
-      <div id="presentation-intro-2" class="slp my-auto"></div>
-
-      <script src='static/js/embed_presentation.js'></script>
-      <script>
-        embed_2 = new SlidesLiveEmbed('presentation-intro-2', {
-        presentationId: '38952019',
+{#        autoPlay: false, // change to true to autoplay the embedded presentation#}
+{#        verticalEnabled: false,#}
+{#        verticalWhenWidthLte: 500,#}
+{#        allowHiddenControlsWhenPaused: true,#}
+{#        hideTitle: true#}
+{#        });#}
+{#      </script>#}
+{##}
+{#    </div>#}
+{##}
+{#     <div class="col-md-12 col-xs-12 my-auto p-2" >#}
+{#        <div class="text-muted">#}
+{#      Intro by Associate Conference Chairs for Virtual Operations#}
+{#      </div>#}
+{##}
+{#      <div id="presentation-intro-2" class="slp my-auto"></div>#}
+{##}
+{#      <script src='static/js/embed_presentation.js'></script>#}
+{#      <script>#}
+{#        embed_2 = new SlidesLiveEmbed('presentation-intro-2', {#}
+{#        presentationId: '38952019',#}
 {#        presentationId: '38938822',#}
-        autoPlay: false, // change to true to autoplay the embedded presentation
-        verticalEnabled: false,
-        verticalWhenWidthLte: 500,
-        allowHiddenControlsWhenPaused: true,
-        hideTitle: true
-        });
-      </script>
+{#        autoPlay: false, // change to true to autoplay the embedded presentation#}
+{#        verticalEnabled: false,#}
+{#        verticalWhenWidthLte: 500,#}
+{#        allowHiddenControlsWhenPaused: true,#}
+{#        hideTitle: true#}
+{#        });#}
+{#      </script>#}
+{##}
+{#    </div>#}
 
-    </div>
 
+{#  </div>#}
 
-  </div>
     <div class="text-center mt-4">
       <h5>Announcements</h5>
       <div class="col-md-12 col-xs-12">
