--- a/templates/posters.html
+++ b/templates/posters.html
@@ -16,8 +16,8 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
 4:45 - 6:30 PM PST,
 12:45 - 2:30 AM PST.
  Authors are encouraged to be available during two sessions each day.<br>
-    An instructional video on how to navigate a Virtual Chair event space can be found at <a href="https://video.virtualchair.net/VirtualChairIntroVideo" target="_blank">https://video.virtualchair.net/VirtualChairIntroVideo</a>.
-        <br>
+    Please see the instructional <a href="https://drive.google.com/file/d/18NEr2DmVK6pzjH3A5vTljOrdLrNrtXl8/view" target="_blank" style="text-decoration:underline;">document</a> and <a href="https://video.virtualchair.net/VirtualChairIntroVideo" target="_blank" style="text-decoration:underline;">video</a> on how to navigate a <a href="https://www.virtualchair.net/events/aaai-2021" target="_blank" style="text-decoration:underline;">Virtual Chair event space</a>.
+    <br>
     <table class="table table-bordered">
 {#  <caption>基本的表格布局</caption>#}
 {#  <thead>#}
