--- a/templates/meet_with_a_fellow.html
+++ b/templates/meet_with_a_fellow.html
@@ -28,7 +28,7 @@
   </div>
 </div>
     <h2 class="card-title main-title text-center">
-      AAAI-21 Meet with a Fellow Program
+      AAAI-21 Meet with a Fellow Schedule
     </h2>
     <div>
       <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
