--- a/templates/ai_job_fair.html
+++ b/templates/ai_job_fair.html
@@ -44,6 +44,22 @@
   </div>
 </div>
 
+</div>
+<div class="text-center mt-4">
+    <h5>AI Job Fair RocketChat Channel</h5>
+    <div class="col-md-12 col-xs-12">
+        <div id="gitter" class="slp">
+            <center>
+                <iframe frameborder="0" src="https://{{config.chat_server}}/channel/AIJobFair?layout=embedded" height="500px" width="100%" ></iframe>
+            </center>
+        </div>
+    </div>
+</div>
+
+
+
+</div>
+
 {% endblock %}
 
 {% block footer %}
