--- a/templates/components.html
+++ b/templates/components.html
@@ -74,6 +74,14 @@
             </div>
             {% endif %}
 
+              {% if plenary_session.introduction != none %}
+            <div class="m-3 text-muted">
+              <span class="card-title h3">
+                {{plenary_session.introduction}}
+              </span>
+            </div>
+            {% endif %}
+
             {% for session in plenary_session.sessions %}
             <div class="m-3 text-muted">
               {{session.session}}
@@ -145,14 +153,24 @@
 {#                [<a href="livestream.html"   class="card-link">Watch video</a>]#}
             </div>
             {% endfor %}
+    </div>
+     <div class="row">
+            {% if plenary_session.introduction != none %}
+            <div class="m-3">
+              <span>
+                {{plenary_session.introduction}}
+              </span>
+            </div>
+            {% endif %}
 
             {% if plenary_session.abstract != none %}
             <div class="m-3">
               {{plenary_session.abstract|markdown}}
             </div>
             {% endif %}
-          </div>
+
 {#        </div>#}
+       </div>
     </div>
   </div>
 </div>
@@ -193,6 +211,14 @@
                 {% if plenary_session.institution != none %}
                 / {{plenary_session.institution}}
                 {% endif %}
+              </span>
+            </div>
+            {% endif %}
+
+              {% if plenary_session.introduction != none %}
+            <div class="m-3 text-muted">
+              <span class="card-title h3">
+                {{plenary_session.introduction}}
               </span>
             </div>
             {% endif %}
@@ -253,6 +279,13 @@
               </span>
 {#            </div>#}
                 <br>
+            {% endif %}
+                          {% if plenary_session.introduction != none %}
+            <div class="m-3 text-muted">
+              <span class="card-title h3">
+                {{plenary_session.introduction}}
+              </span>
+            </div>
             {% endif %}
               {% for image in plenary_session.image %}
 {#                  {{image}}#}
