--- a/templates/eaai.html
+++ b/templates/eaai.html
@@ -102,7 +102,7 @@ EAAI-21 co-chairs
 </ul>
 <p><strong>[12:00 - 12:45]  Main Track</strong>  </p>
 <ul>
-<li>Using Visualized NLP in Undergraduate Students' Learning about Natural Language</a><br>
+<li><a href="https://virtual.2021.aaai.org/paper_EAAI-23.html">Visualized NLP in Undergraduate Students' Learning about Natural Language</a><br>
 <em>Cecilia Ovesdotter Alm, Alex Hedges</em></li>
 <li><a href="https://www.aaai.org/AAAI21Papers/EAAI-68.GrenanderM.pdf">Deep Discourse Analysis for Generating Personalized Feedback in Intelligent Tutor Systems</a><br>
 <em>Matt Grenander, Robert Belfer, Ekaterina Kochmar, Iulian Serban, François St-Hilaire, Jackie Cheung</em> </li>
