--- a/templates/components.html
+++ b/templates/components.html
@@ -280,13 +280,7 @@
 {#            </div>#}
                 <br>
             {% endif %}
-                          {% if plenary_session.introduction != none %}
-            <div class="m-3 text-muted">
-              <span class="card-title h3">
-                {{plenary_session.introduction}}
-              </span>
-            </div>
-            {% endif %}
+
               {% for image in plenary_session.image %}
 {#                  {{image}}#}
                 <img style="width: 150px; height: 150px; margin:10px"  src="{{image}}" class="mt-3" />
@@ -304,6 +298,15 @@
 {#                [<a href="livestream.html"   class="card-link">Watch video</a>]#}
             </div>
             {% endfor %}
+        </div>
+        <div class="row">
+                        {% if plenary_session.introduction != none %}
+            <div class="m-3 text-muted">
+              <span class="card-title h3">
+                {{plenary_session.introduction}}
+              </span>
+            </div>
+            {% endif %}
 
             {% if plenary_session.abstract != none %}
             <div class="m-3">
@@ -312,7 +315,7 @@
             {% endif %}
           </div>
 {#        </div>#}
-    </div>
+</div>
   </div>
 </div>
 {% endfor %}
