--- a/templates/plenary_session.html
+++ b/templates/plenary_session.html
@@ -14,7 +14,7 @@
 
     </h3>
                 <h2 class="card-title main-title text-center" style="color:black">
-      Invited Talk: IAAI-21 Robert S. Engelmore Memorial Award Lecture
+      2021 Robert S. Engelmore Memorial Award Lecture
 
     </h2>
           <h3 class="card-subtitle mb-2 text-muted text-center">
