--- a/templates/index.html
+++ b/templates/index.html
@@ -163,7 +163,7 @@
             The <a class="text" href="eaai.html">EAAI-21</a> will be conducted live via Zoom. All conference registrants are welcome.
         </dd>
 
-        <dt>Doctoral and Undergraduate Consortia</dt>
+        <dt>Doctoral and Undergraduate Consortium</dt>
         <dd>
             The <a class="text" href="doctoral_consortium.html">Doctoral</a> and <a class="text" href="undergraduate_consortium.html">Undergraduate</a> Consortia will be conducted live via Zoom. All AAAI-21 registrants are welcome.
         </dd>
