--- a/templates/index.html
+++ b/templates/index.html
@@ -165,7 +165,7 @@
 
         <dt>Doctoral and Undergraduate Consortium</dt>
         <dd>
-            The <a class="text" href="doctoral_consortium.html">Doctoral</a> and <a class="text" href="undergraduate_consortium.html">Undergraduate</a> Consortia will be conducted live via Zoom. All AAAI-21 registrants are welcome.
+            The <a class="text" href="doctoral_consortium.html">Doctoral</a> and <a class="text" href="undergraduate_consortium.html">Undergraduate</a> Consortium will be conducted live via Zoom. All AAAI-21 registrants are welcome.
         </dd>
 
 
