--- a/templates/demonstrations.html
+++ b/templates/demonstrations.html
@@ -400,6 +400,10 @@ aria-labelledby="nav-profile-tab"
 
 <div class="row m-2">
 <div id="rocketchat_div" class="col-md-5 col-xs-12 p-2">
+    <div class="text-muted text-center">
+        You can open <a href="https://{{config.chat_server}}/channel/AAAI21Demonstrations" target="_blank">AAAI21Demonstrations</a>
+        channel in a separate window.
+      </div>
       <div id="gitter" class="slp">
         <iframe frameborder="0" onload="change_col();return false;" src="https://aaai-21.rocket.chat/channel/AAAI21Demonstrations?layout=embedded" height="700px" width="100%" ></iframe>
       </div>
