--- a/templates/doctoral_consortium.html
+++ b/templates/doctoral_consortium.html
@@ -151,6 +151,10 @@
 {#  </div>#}
 
   <div id="rocketchat_div" class="col-md-5 col-xs-12 p-2">
+      <div class="text-muted text-center">
+        You can open <a href="https://{{config.chat_server}}/channel/Events_DoctoralConsortium" target="_blank">Doctoral Consortium</a>
+        channel in a separate window.
+      </div>
       <div id="gitter" class="slp">
         <iframe frameborder="0" onload="change_col();return false;" src="https://aaai-21.rocket.chat/channel/Events_DoctoralConsortium?layout=embedded" height="700px" width="100%" ></iframe>
       </div>
