add separate rocketchat

--- a/templates/index.html
+++ b/templates/index.html
@@ -296,6 +296,9 @@
 
     <div class="text-center mt-4">
       <h5>Announcements</h5>
+        <div>
+            You can open the <a class="text" href="https://{{config.chat_server}}/channel/announcements">announcement</a> channel in separate window.
+        </div>
       <div class="col-md-12 col-xs-12">
         <div id="gitter" class="slp">
           <center>
