--- a/templates/index.html
+++ b/templates/index.html
@@ -296,9 +296,9 @@
 
     <div class="text-center mt-4">
       <h5>Announcements</h5>
-        <div>
-            You can open the <a class="text" href="https://{{config.chat_server}}/channel/announcements">announcement</a> channel in separate window.
-        </div>
+        <p>
+            You can open the <a class="text" href="https://{{config.chat_server}}/channel/announcements" target="_blank">announcement</a> channel in separate window.
+        </p>
       <div class="col-md-12 col-xs-12">
         <div id="gitter" class="slp">
           <center>
@@ -323,7 +323,7 @@ The AAAI2021 virtual conference website
 uses <a href="https://github.com/Mini-Conf/Mini-Conf" >MiniConf</a> built by Hendrik Strobelt and Sasha Rush that
   was extended by the <a href="https://github.com/acl-org/acl-2020-virtual-conference" >ACL 2020</a> and
     <a href="https://github.com/acl-org/emnlp-2020-virtual-conference">EMNLP 2020</a>.
-The AAAI2021 infrastructure committee is very grateful to the <a class="text" href="https://elasticbeanstalk-us-east-2-764613980718.s3.us-east-2.amazonaws.com/AAAI2021_TechnicalVolunteers.pdf">technical volunteers</a> and contributors whose valuable contributions to building the virtual infrastructure made the conference possible.
+The AAAI2021 infrastructure committee is very grateful to the <a class="text" href="https://elasticbeanstalk-us-east-2-764613980718.s3.us-east-2.amazonaws.com/AAAI2021_TechnicalVolunteers.pdf" target="_blank">technical volunteers</a> and contributors whose valuable contributions to building the virtual infrastructure made the conference possible.
 We would also like to thank <a href="https://desilinguist.org/">Nitin Madnani</a> for his advice and IT
   support regarding the virtual infrastructure. We also want to thank
   AI2  for contributing the <a href="https://github.com/allenai/specter">SPECTER model</a>
