--- a/templates/meet_with_a_fellow.html
+++ b/templates/meet_with_a_fellow.html
@@ -52,15 +52,15 @@
               </tr>
               <tr>
                 <td scope="row">February 5, 12:00 PM - 01:00 PM PST</td>
-                <td style="white-space: pre-wrap;">Murray Campbell, Eugene Freuder, Mark Maybury, Marie desJardins</td>
+                <td style="white-space: pre-wrap;">Murray Campbell, Marie desJardins, Eugene Freuder, Mark Maybury</td>
               </tr>
               <tr>
                 <td scope="row">February 5, 01:00 PM - 02:00 PM PST</td>
-                <td style="white-space: pre-wrap;">Alan Mackworth</td>
+                <td style="white-space: pre-wrap;">Jim Hendler, Alan Mackworth, Antonio Torralba</td>
               </tr>
               <tr>
                 <td scope="row">February 6, 12:00 PM - 01:00 PM PST</td>
-                <td style="white-space: pre-wrap;">Bing Liu</td>
+                <td style="white-space: pre-wrap;">Chad Jenkins, Bing Liu</td>
               </tr>
               <tr>
                 <td scope="row">February 6, 08:00 PM - 09:00 PM PST</td>
