gather.town link added

--- a/templates/sponsor.html
+++ b/templates/sponsor.html
@@ -13,6 +13,7 @@
 
 <div class="row justify-content-md-center mt-n3 pb-3">
   <div class="col-6 text-center lead">
+      <a href="{{sponsor.gather_link}}" target="_blank">Join the Sponsor/Exhibit Program</a>&ensp;
       <a href="{{sponsor.website}}" target="_blank">Visit Website</a>
   </div>
 </div>
