diversity program description update

--- a/templates/diversity_programs.html
+++ b/templates/diversity_programs.html
@@ -10,6 +10,8 @@
       <p>Welcome to the AAAI-21 Diversity and Inclusion Program!</p>
   
   <p>Participation in AI by groups that are underrepresented in computer science is a fraction of what is needed to have an AI workforce that reflects the diversity in society. Diversity has many facets, including race, ethnicity, gender, age, religion, disability, sexual orientation, socioeconomic status, and cultural background. AAAI-21 will include several programs specifically designed to address this challenging issue.</p>
+
+  <p>AAAI would like to thank its Platinum Sponsors -- Amazon and IBM -- as well as its Gold Sponsors -- Baidu, Google, and Sony -- for their generous support, which makes the AAAI Diversity and Inclusion Program possible.</p>
   
   <p>Maria Gini and Richard Souvenir <br>
   Diversity and Inclusion Cochairs</p>
