--- a/templates/doctoral_consortium.html
+++ b/templates/doctoral_consortium.html
@@ -42,7 +42,7 @@
     <a href="https://aaaidc.github.io/dc2021/" target="_blank"  class="card-link">
         External Site
     </a>
-    <a href="https://zoom.us/j/99461366394?pwd=dlo2U0J5cHgxWUVEajhHMXBoT1VKdz09" target="_blank"  class="card-link">
+    <a href="https://zoom.us/meeting/register/tJ0pceirqD0pE9ARE7LQ1KPvYP3bElyBBrVN" target="_blank"  class="card-link">
         Join Zoom Meeting (Day1)
     </a>
     <a href="https://zoom.us/meeting/register/tJMocumspjsjGdQtMMM7hrki5974cuLGhxcB" target="_blank"  class="card-link">
