--- a/templates/ai_job_fair.html
+++ b/templates/ai_job_fair.html
@@ -16,7 +16,7 @@
     External Website: <a href="https://aaaijobfair.com/"> https://aaaijobfair.com/</a><br>
     
     1-Minute Company Presentations: First 30 minutes of each session<br>
-    Virtual exhibits: Following 1.5 hours of each session<br><br>
+    <a href="https://www.virtualchair.net/venues/aaai-2021"> Virtual exhibits</a>: Following 1.5 hours of each session<br><br>
     
     The AAAI and ACM SIGAI AI Job Fair provides an opportunity for a host of companies and institutions to highlight their current job opportunities. The short presentations will be followed by opportunities for job seekers to visit participating company virtual booths for one-on-one meetings. The list of participating companies is included below.<br><br>
     
