--- a/templates/sponsors.html
+++ b/templates/sponsors.html
@@ -11,7 +11,7 @@
 <div class="row">
   <div class="col-12 pb-4">
     <p class="lead">
-        AAAI welcomes you to its annual Sponsor and Exhibit program. We would like to thank all of our sponsors for their generous support of AAAI programs and students. The exhibit program will be available during the following hours:<br>
+        AAAI welcomes you to its annual Sponsor and Exhibit program. We would like to thank all of our sponsors for their generous support of AAAI programs and students. The exhibit program will be available in <a href="https://www.virtualchair.net/venues/aaai-2021"> Virutal Chair on Gather.Town</a> during the following hours:<br>
         February 4-6<br>
         ------------<br>
         10:00 AM - 12:30 PM PST<br>
